# solid-barnacle

./: .gitignore  1806.03417.md  Database_structure.md  README.md  account_distances.txt  fix_encoding.py  main.py  pyproject.toml  refs.md  rough_plan.md  thoughts.md  v2.md  v2_mermaid.md
config/: model_config.yaml  training_config.yaml
data/: loader.py  psql_connection.py
inference/: infer_transformer.py
models/: transformer.py
models/blocks/: encoder.py
models/embeddings/: account_encoder.py  day_encoder.py  text_encoder.py
tests/: EVALUATION_METRICS.md  _play.py  test_account_encoder.py  test_transformer_model.py  text_encoder_test.py
training/: train_account_embeddings.py  train_transformer.py
v3/: main.py
v3/knn/: embeddings.pt  metadata.pkl
