[project]
name = "new-je-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector[pg8000]>=1.5.0",
    "dotenv>=0.9.9",
    "einops>=0.6.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "openai>=2.8.0",
    "pandas>=2.0.0",
    "pg8000>=1.29.8",
    "plotly>=6.4.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "tensorboard>=2.13.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]
